<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">DPC</string>
    <string name="login">LOGIN</string>
    <string name="loginPageCopyright">Copyright \u00A9 2015 TNCSC | Help Desk - 1967 / 1800-425-5901</string>
    <string name="loading">Loading...</string>
    <string name="txt_ok">Ok</string>
    <string name="txt_cancel">Cancel</string>
    <string name="txt_clear">Clear</string>
    <string name="txt_Back">Back</string>
    <string name="txt_Procurement_History">Procurement History</string>
    <string name="txt_Truck_Memo_History">Truck Memo History</string>
    <string name="txt_Former_List">Farmer List</string>
    <string name="txt_Reports">Reports</string>
    <string name="txt_Procurement">Procurement</string>
    <string name="txt_Truck_Memo">Truck  Memo</string>
    <string name="txt_Daily_Wagers">Vouchers</string>
    <string name="txt_Others">Others</string>
    <string name="txt_Online">Online</string>
    <string name="txt_Offline">Offline</string>
    <string name="txt_Ration_card_Number">Ration Card Number</string>
    <string name="txt_OR">OR</string>
    <string name="txt_Name">Farmer Name</string>
    <string name="txt_Father">Father/Husband Name</string>
    <string name="txt_Date_of_Birth">Date of Birth</string>
    <string name="txt_Address">Address</string>
    <string name="txt_View_Address">View Address</string>
    <string name="txt_Select">Select</string>
    <string name="txt_List_of_Beneficiary">List of Beneficiary</string>
    <string name="txt_Village">Village</string>
    <string name="txt_Taluk">Taluk</string>
    <string name="txt_District">District</string>
    <string name="txt_MobileNumber">Mobile Number</string>
    <string name="txt_Society_Name">Society Name</string>
    <string name="txt_Farmer_Class">Community</string>
    <string name="txt_Loan_Account_Number">Loan Account Number</string>
    <string name="txt_Bank_Name">Bank Name</string>
    <string name="txt_Account_Number">Account Number</string>
    <string name="txt_Ac_Number">Acc Number</string>
    <string name="txt_Credit_Card">Credit Card Number</string>
    <string name="txt_BranchName">Branch Name</string>
    <string name="txt_IFSC_Code">IFSC Code</string>
    <string name="txt_Bank_Details">Bank Details</string>
    <string name="txt_Basic_Details">Basic Details</string>
    <string name="txt_Land_Details">Land Details</string>
    <string name="txt_Add_Land_Details">Add Land Details</string>
    <string name="txt_Crop_Name">Crop Name</string>
    <string name="txt_Land_Type">Land Type</string>
    <string name="txt_Main_Land_Lord_Name">Main Land Lord Name</string>
    <string name="txt_Loan_Book_Number">Loan Book Number</string>
    <string name="txt_Survey_Number">Survey Number</string>
    <string name="txt_Area">Area (Acre)</string>
    <string name="txt_Area_of_seed_sowed_for_Procurement">Area of seed sowed for Procurement (Kgs)</string>
    <string name="txt_Accumulated_kgs">Accumulated </string>
    <string name="txt_Non_Accumulated_kgs">Non Accumulated </string>
    <string name="txt_Total_kgs">Total </string>
    <string name="txt_Accumulated_Quintal">Accumulated </string>
    <string name="txt_Non_Accumulated_Quintal">Non Accumulated </string>
    <string name="txt_Total_Quintal">Total </string>
    <string name="txt_Expected_Quantity_for_Procurement">Expected Quantity for Procurement (Quintal)</string>
    <string name="txt_View_Land_Details">View Land Details</string>
    <string name="txt_Paddy_Category">VARIETY</string>
    <string name="txt_Moisture_Content">Moisture Content(%)</string>
    <string name="txt_Number_of_Bags">Number of Bags</string>
    <string name="txt_Grade">Grade</string>
    <string name="txt_Net_weight">Net Weight(q)</string>
    <string name="txt_okk">Ok</string>
    <string name="txview_gua">Guardian Name</string>
    <string name="tx_guardian">Farmer\'s Father/ Husband Name</string>
    <string name="txt_guardian">Select</string>
    <string name="txt_enter_taluk">Enter the Taluk</string>
    <string name="txt_enter_bob">Enter the date of birth</string>
    <string name="txt_enter_village">Village</string>
    <string name="txt_crop_name">crop Name</string>
    <string name="txt_Main_Land">Main Land Lord Name</string>
    <string name="txt_Loan_Book_No">Loan Book No</string>
    <string name="txt_surver_number">Survey No</string>
    <string name="txt_view">View</string>
    <string name="txt_code">Reg.No</string>
    <string name="Mobile_No">Mobile No</string>
    <string name="Area">Area (ha)</string>
    <string name="txt_Aadhaar">Aadhaar</string>
    <string name="txt_qty"> Expt Qty for procurement (q)</string>
    <string name="txt_num_land">No.Of Lands</string>
    <string name="txt_search">search</string>
    <string name="txt_Contact_Details">Contact Details</string>
    <string name="txt_ad1">Address Line 1</string>
    <string name="txt_ad2">Address Line 2</string>
    <string name="txt_fmn">Farmer Name</string>
    <string name="txt_adrnum">Aadhaar Number</string>
    <string name="txt_pincode">Pincode</string>
    <string name="txt_DPC">DPC</string>
    <string name="Total_Farmers">Total Farmers</string>
    <string name="txt_status">Get Status</string>
    <string name="view_Land_Details">View Land Details</string>
    <string name="serviceTimeout" tools:ignore="MissingTranslation">300000</string>
    <string name="txt_patta_Number">Patta Number</string>
    <string name="txt_expected_date">Expected Date of Procurement</string>
    <string name="txt_farmer_code">Farmer Code</string>
    <string name="txt_Associated_List">Associated Farmers</string>
    <string name="txt_farmer_nm">Farmer Name</string>
    <string name="txt_Farmer"> Farmer\'s Father/ Husband Name</string>
    <string name="txt_Aadhaar_card_number">Aadhaar card number</string>
    <string name="tool_login_title_en">TAMILNADU CIVIL SUPPLIES CORPORATION</string>
    <string name="tool_login_title_ta">தமிழ்நாடு நுகர்பொருள் வாணிபக் கழகம்</string>
    <string name="tool_DIRECT_PROCUREMENT_CENTER_en">DIRECT PROCUREMENT CENTER</string>
    <string name="tool_DIRECT_PROCUREMENT_CENTER_ta">நேரடி கொள்முதல் மையம்</string>
    <string name="btn_login">Login</string>
    <string name="btn_Scan_Aadhaar_Card">Scan Aadhaar Card</string>
    <string name="btn_Scan_Smart_Card">Scan Smart Card</string>
    <string name="btn_Search">Search</string>
    <string name="btn_Next">Next</string>
    <string name="btn_Submit">Submit</string>
    <string name="btn_Cancel">Cancel</string>
    <string name="btn_Edit">Edit</string>
    <string name="btn_Confirm">Confirm</string>
    <string name="hint_login_id">Login ID</string>
    <string name="hint_Password">Password</string>
    <string name="hint_dialog_url">URL</string>
    <string name="toast_Please_Enter_the_User_Name">Please Enter the User Name</string>
    <string name="toast_Please_Enter_the_Password">Please Enter the Password</string>
    <string name="toast_userName_or_Password_is_incorrect">Username or Password is incorrect</string>
    <string name="toast_Device_is_not_Registered_Please_Contact_to_Helpdesk">Device is not Registered,Please Contact to Helpdesk</string>
    <string name="toast_Device_is_not_associated">Device is not associated</string>
    <string name="toast_server_unreachable">Server Unreachable</string>
    <string name="toast_Device_inactive_contact_Help_Desk">Device is inactive contact Help Desk</string>
    <string name="toast_Device_request_already_sent">Device Registration Request is already exits,Please Contact Help desk</string>
    <string name="toast_server_di">Please select the district</string>
    <string name="toast_server_tk">Please enter the taluk</string>
    <string name="toast_Please_enter_the_mobile_number">Please enter the mobile number</string>
    <string name="toast_fm_class">Please select the community</string>
    <string name="toast_gdn">Please enter the guardian name</string>
    <string name="toast_Guardian">Please select the Guardian </string>
    <string name="toast_Please_select_bank">Please select bank</string>
    <string name="toast_Please_enter_the_branch">Please enter the branch</string>
    <string name="toast_Please_enter_the_account_number">Please enter the account number</string>
    <string name="toast_Please_enter_the_IFSC_number"> Please enter the IFSC number</string>
    <string name="toast_Please_select_village">Please select Village</string>
    <string name="toast_Please_Select_Crop_Name">Please Select Crop Name</string>
    <string name="toast_Please_Select_Land_Type">Please Select Land Type</string>
    <string name="toast_Please_Enter_Land_Lord_Name">Please Enter Land Lord Name</string>
    <string name="toast_Please_Enter_Loan_Book_Numbere">Please Enter Loan Book Number</string>
    <string name="toast_Please_Enter_Survey_Number">Please Enter Survey Number</string>
    <string name="toast_Please_Enter_Area">Please Enter Area</string>
    <string name="toast_Please_Enter_Accumulated_in_Kgs">Please Enter Accumulated in Kgs</string>
    <string name="toast_Please_Enter_Non_Accumulated_in_Kgs">Please Enter Non Accumulated in Kgs</string>
    <string name="toast_Please_Enter_Accumulated_in_Quintal">Please Enter Accumulated in Quintal</string>
    <string name="toast_Please_Enter_Non_Accumulated_in_Quintal">Please Enter Non Accumulated in Quintal</string>
    <string name="toast_Please_enter_the_farmer_name">Please enter farmer name</string>
    <string name="toast_Please_Choose_the_Guardian_Type">Please choose the guardian Type</string>
    <string name="toast_Please_Choose_the_Guardian_name">Please enter the guardian name</string>
    <string name="toast_Please_enter_the_aadhaar_number">Please enter the Aadhaar number</string>
    <string name="toast_Please_enter_the_correct_aadhaar_number">Please enter the correct Aadhaar number</string>
    <string name="toast_Please_Choose_community">Please choose farmer community</string>
    <string name="toast_Please_address">Please enter the address line 1</string>
    <string name="toast_Please_pin">Please enter the pin code</string>
    <string name="toast_pin_six">Pin code always starts with 6</string>
    <string name="toast_Please_dis">Please select the district</string>
    <string name="toast_Please_taluk">Please select the taluk</string>
    <string name="toast_Please_village">Please select the village</string>
    <string name="toast_Please_user">User doesn\'t have credentials</string>
    <string name="toast_Sync_Completed">Sync Completed</string>
    <string name="aadhr">Please enter the 12 digit aadhar number</string>
    <string name="successful_submission">Successfully Submitted</string>
    <string name="confirmation_details">Your details successfully submitted for approval</string>
    <string name="Reference_number">and your Reference Number is</string>
    <string name="txt_DPC_Code">DPC Code</string>
    <string name="txt_DPC_name">DPC Name</string>
    <string name="paddyCategory">Paddy Variety</string>
    <string name="NumberOfBags">Number of Bags </string>
    <string name="LorryNumber">Lorry Number</string>
    <string name="ConditionOfGunny"> Condition of Gunny</string>
    <string name="Grade"> Grade </string>
    <string name="Netquantity"> Net Quantity (q) </string>
    <string name="TransporterName"> Transporter Name </string>
    <string name="GunnyCapacity"> Gunny Capacity (Kg) </string>
    <string name="MoistureContent"> Moisture Content(%) </string>
    <string name="TransportType"> Transport Type </string>
    <string name="CapCodeName"> Cap Code/Name</string>
    <string name="truckmemosuccess"> Truck Memo Generated Successfully</string>
    <string name="truckmemono">Truck Memo Number is</string>
    <string name="specification">Specification</string>
    <string name="retrieve_db">Retrieve DB</string>
    <string name="retrieveDbString">Database will be retrieved from POS memory to SD card</string>
</resources>