<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="700dp"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="#13B933">

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:background="@color/white">

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/ic_tick_successful_procurement"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/dialog_head"
        android:textColor="@color/black"
        android:text="@string/successful_submission"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:textSize="@dimen/dialog_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:textColor="#13B933"
        android:layout_marginRight="10dp"
        android:text="@string/confirmation_details"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:textSize="@dimen/dialog_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:textColor="#13B933"
            android:text="@string/Reference_number"/>

    <TextView
        android:id="@+id/referenceNmber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        />

        <Button

            android:id="@+id/btn_ok"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_background_blue"
            android:text="@string/txt_okk"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/farmer_reg"
            android:layout_marginBottom="20dp"/>

    </LinearLayout>

</LinearLayout>