<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="700dp"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="#13B933">

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_tick_successful_procurement" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/successful_submission"
            android:textColor="@color/black"
            android:textSize="@dimen/dialog_head" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/truckmemosuccess"
            android:textColor="#13B933"
            android:textSize="@dimen/dialog_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/truckmemono"
            android:textColor="#13B933"
            android:textSize="@dimen/dialog_content" />

        <TextView
            android:id="@+id/referenceNmber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp" />

        <Button

            android:id="@+id/btn_ok"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_background_blue"
            android:text="@string/txt_okk"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/farmer_reg" />

    </LinearLayout>

</LinearLayout>